remove fixed height, fix bug on having scrollbar with too much spaces at the bottom

--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@
 
 html, body {
     font-family: 'PlusJakartaSansRegular', Helvetica, Arial, sans-serif;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
     background-image: url(../images/bg.png);
     background-position: top center;
     background-repeat: no-repeat;
-    touch-action: none;
-    -ms-touch-action: none;
+    /* touch-action: none; */
+    /* -ms-touch-action: none; */
 }
 
 .container {
